# RmlUi

./: .appveyor.yml  .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  .travis.valgrind.supp  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ElementPtr_Fix_Explanation.md  LICENSE  LICENSE.txt  LICENSES_THIRDPARTY  changelog.md  changelog.txt  compile_commands.json  conanfile.py  contributing.md  how_to_build_for_mingw.txt  premake5.lua  readme.md
Backends/: CMakeLists.txt  RmlUi_Backend.cpp  RmlUi_Backend.h  RmlUi_Backend_GLFW_DX11.cpp  RmlUi_Backend_GLFW_DX12.cpp  RmlUi_Backend_GLFW_GL2.cpp  RmlUi_Backend_GLFW_GL3.cpp  RmlUi_Backend_GLFW_VK.cpp  RmlUi_Backend_SDL3_SDLrenderer.cpp  RmlUi_Backend_SDL_DX12.cpp  RmlUi_Backend_SDL_GL2.cpp  RmlUi_Backend_SDL_GL3.cpp  RmlUi_Backend_SDL_GPU.cpp  RmlUi_Backend_SDL_SDLrenderer.cpp  RmlUi_Backend_SDL_VK.cpp  RmlUi_Backend_SDL_Vulkan.cpp  RmlUi_Backend_SFML_GL2.cpp  RmlUi_Backend_Wayland_GL3.cpp  RmlUi_Backend_Win32_DX11.cpp  RmlUi_Backend_Win32_DX12.cpp  RmlUi_Backend_Win32_GL2.cpp  RmlUi_Backend_Win32_VK.cpp  RmlUi_Backend_X11_GL2.cpp  RmlUi_Include_DirectX_12.h  RmlUi_Include_GL3.h  RmlUi_Include_Vulkan.h  RmlUi_Include_Windows.h  RmlUi_Include_Xlib.h  RmlUi_Platform_GLFW.cpp  RmlUi_Platform_GLFW.h  RmlUi_Platform_SDL.cpp  RmlUi_Platform_SDL.h  RmlUi_Platform_SDL3.cpp  RmlUi_Platform_SFML.cpp  RmlUi_Platform_SFML.h  RmlUi_Platform_Wayland.cpp  RmlUi_Platform_Wayland.h  RmlUi_Platform_Win32.cpp  RmlUi_Platform_Win32.h  RmlUi_Platform_X11.cpp  (+20 more)
Backends/RmlUi_BackwardCompatible/: RmlUi_Backend_BackwardCompatible_GLFW_GL2.cpp  RmlUi_Backend_BackwardCompatible_GLFW_GL3.cpp  RmlUi_Renderer_BackwardCompatible_GL2.cpp  RmlUi_Renderer_BackwardCompatible_GL2.h  RmlUi_Renderer_BackwardCompatible_GL3.cpp  RmlUi_Renderer_BackwardCompatible_GL3.h
Backends/RmlUi_DirectX/: LICENSE.txt  compile_shaders.py  offsetAllocator.cpp  offsetAllocator.hpp  shader_frag_color.hlsl  shader_frag_texture.hlsl  shader_vert.hlsl
Backends/RmlUi_SDL_GPU/: ShadersCompiledSPV.h  compile_shaders.py  shader_frag_color.frag  shader_frag_texture.frag  shader_vert.vert
Backends/RmlUi_Vulkan/: LICENSE.txt  ShadersCompiledSPV.h  compile_shaders.py  shader_frag_texture.frag  shader_vert.vert  shader_vert_main.vert  spirv_reflect.cpp  spirv_reflect.h  vulkan.h  vulkan_modern.h
Samples/: .gitignore  CMakeLists.txt  README.TXT  readme.md
Samples/assets/: Arial.fnt  LICENSE.txt  bitmapfont.rml  cursor.rml  data-window.rml  demo.rml  invader.rcss  invader.tga  lottie.rml  present.tga  rml.rcss  rmlui.frag  rmlui.vert  rmlui_frag.spv  rmlui_vert.spv  shader_pixel_with_textures.frag  shader_pixel_with_textures.spv  shader_pixel_without_textures.frag  shader_pixel_without_textures.spv  shader_vertex.spv  shader_vertex.vert  test.rcss  window.rml
Samples/basic/: CMakeLists.txt
Samples/invaders/: CMakeLists.txt  RocketInvaders.sln  RocketInvaders.vcproj
Samples/lua_invaders/: CMakeLists.txt
Samples/luainvaders/: CMakeLists.txt  LuaRocketInvaders.sln  LuaRocketInvaders.vcproj  PyRocketInvaders.vcproj
Samples/pyinvaders/: PyRocketInvaders.vcproj
Samples/shell/: CMakeLists.txt  Shell.vcproj  Shell.vcxproj  Shell.vcxproj.filters
Samples/tutorial/: CMakeLists.txt
Source/: CMakeLists.txt
Source/Controls/: Clipboard.cpp  Controls.cpp  DataFormatter.cpp  DataQuery.cpp  DataSource.cpp  DataSourceListener.cpp  ElementDataGrid.cpp  ElementDataGridCell.cpp  ElementDataGridExpandButton.cpp  ElementDataGridRow.cpp  ElementForm.cpp  ElementFormControl.cpp  ElementFormControlDataSelect.cpp  ElementFormControlInput.cpp  ElementFormControlSelect.cpp  ElementFormControlTextArea.cpp  ElementProgressBar.cpp  ElementTabSet.cpp  ElementTextSelection.cpp  ElementTextSelection.h  ID.cpp  InputType.cpp  InputType.h  InputTypeButton.cpp  InputTypeButton.h  InputTypeCheckbox.cpp  InputTypeCheckbox.h  InputTypeRadio.cpp  InputTypeRadio.h  InputTypeRange.cpp  InputTypeRange.h  InputTypeSubmit.cpp  InputTypeSubmit.h  InputTypeText.cpp  InputTypeText.h  SelectOption.cpp  WidgetDropDown.cpp  WidgetDropDown.h  WidgetSlider.cpp  WidgetSlider.h  (+17 more)
Source/Core/: BaseXMLParser.cpp  Box.cpp  BoxShadowCache.cpp  BoxShadowCache.h  BoxShadowHash.h  CMakeLists.txt  CallbackTexture.cpp  Clock.cpp  Clock.h  CompiledFilterShader.cpp  ComputeProperty.cpp  ComputeProperty.h  ComputedValues.cpp  Context.cpp  ContextInstancer.cpp  ContextInstancerDefault.cpp  ContextInstancerDefault.h  ControlledLifetimeResource.h  ConvolutionFilter.cpp  Core.cpp  DataBinding.cpp  DataController.cpp  DataController.h  DataControllerDefault.cpp  DataControllerDefault.h  DataExpression.cpp  DataExpression.h  DataModel.cpp  DataModel.h  DataModelHandle.cpp  DataParser.cpp  DataParser.h  DataTypeRegister.cpp  DataVariable.cpp  DataView.cpp  DataView.h  DataViewDefault.cpp  DataViewDefault.h  DebugFont.h  Decorator.cpp  (+337 more)
Source/Debugger/: BeaconSource.h  CMakeLists.txt  CommonSource.h  DataModelsSource.h  Debugger.cpp  DebuggerPlugin.cpp  DebuggerPlugin.h  DebuggerSystemInterface.cpp  DebuggerSystemInterface.h  ElementContextHook.cpp  ElementContextHook.h  ElementDataModels.cpp  ElementDataModels.h  ElementDebugDocument.cpp  ElementDebugDocument.h  ElementInfo.cpp  ElementInfo.h  ElementLog.cpp  ElementLog.h  FontSource.h  Geometry.cpp  Geometry.h  InfoSource.h  LICENSE.txt  LogSource.h  MenuSource.h  Plugin.cpp  Plugin.h  SystemInterface.cpp  SystemInterface.h
Source/Lottie/: CMakeLists.txt  ElementLottie.cpp  LottiePlugin.cpp  LottiePlugin.h
Source/Lua/: .clang-format  CMakeLists.txt  Colourb.cpp  Colourb.h  Colourf.cpp  Colourf.h  Context.cpp  Context.h  ContextDocumentsProxy.cpp  ContextDocumentsProxy.h  Document.cpp  Document.h  Element.cpp  Element.h  ElementAttributesProxy.cpp  ElementAttributesProxy.h  ElementChildNodesProxy.cpp  ElementChildNodesProxy.h  ElementInstancer.cpp  ElementInstancer.h  ElementStyleProxy.cpp  ElementStyleProxy.h  ElementText.cpp  ElementText.h  Event.cpp  Event.h  EventParametersProxy.cpp  EventParametersProxy.h  GlobalLuaFunctions.h  (+36 more)
Tests/: CMakeLists.txt  readme.md
(+1518 files in other folders)
